--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
+altair == 4.0
 colorama==0.4.3
 hypothesis == 6.54
 mypy == 0.971
-numba == 0.56
-numpy == 1.22
+numba
+numpy
 pre-commit == 2.20.0
 pytest == 7.1.2
 pytest-env
